<resources>
    <string name="app_name">avtogarage</string>
    <string name="login">Log in</string>
    <string name="forget_pass">Forget Password</string>
    <string name="password">Password</string>

    <string name="welcome1">Welcome</string>
    <string name="avtogarage1">avtogarage1</string>

    <string name="back">Geri</string>
    <string name="next">Next</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="code">Code</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="Search">Axtar</string>
    <string name="Date">Tarix</string>
    <string name="customerName">Müşterinin adı ve ya nömresi</string>
    <string name="search">Axtarış</string>
    <string name="correct">Düzəliş et</string>
    <string name="commntText">Alışdırma şamı ancaq original, model hyundai veracruz 3.8 motor V-6</string>
    <string name="answered">Cavablandı</string>
    <string name="rejected">İmtina edildi</string>
    <string name="yearofCar">Avtomobilin buraxılışı</string>
    <string name="vinCode">Avtomobilin Vin kodu</string>
    <string name="car">Avtomobil</string>
    <string name="carType">Hyundai Veracruz</string>
    <string name="product">Mehsul</string>
    <string name="renewal_date">Yenilenme tarixi</string>
    <string name="addingDate">Elave olunma tarixi</string>
    <string name="renewaldate">08.20.20 09:53</string>
    <string name="addingTime">08.20.20 09:53</string>
    <string name="customerNumber">+994505310299</string>
    <string name="customer_name">Azər Rəhimov</string>
    <string name="detailid">#10694</string>
    <string name="detailId">#10694</string>
    <string name="waitingResponse">Cavab gözleyir</string>
    <string name="avtogarage">avtogarage</string>
    <string name="lupa">lupa</string>
    <string name="Id">#10694</string>
    <string name="detail">Sol qapı iç desteyi</string>
    <string name="social_media">social Media</string>
    <string name="tvdatemenu">19.08.20 16:42</string>
    <string name="waiting_response">Cavab gözleyir</string>
    <string name="logout">Logout</string>
    <string name="reset_info">Reset code was sent to your email. Please enter the code and create new password</string>
    <string name="geri">geri</string>
    <string name="remember">Yadda saxla</string>
    <string name="old_password">Old password</string>
    <string name="avtomed">Avtomed</string>
    <string name="profile">Profile</string>
    <string name="productName">Alışdırma şamı</string>
    <string name="releaseYear">25.06.2010</string>
    <string name="vincode">dksfjsfks213dskf</string>
    <string name="e_mail">E-mail</string>
    <string name="comment">Şərh</string>
    <string name="please_enter_your_email_below_to_reveive_your_password_reset_instructions">Please enter your email below to reveive your password reset instructions</string>
</resources>